# adof

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
commands/: Cargo.toml
commands/commands/: list.rs  mod.rs  summary.rs  update.rs
commands/src/: lib.rs
database/: Cargo.toml
database/src/: add.rs  create.rs  error.rs  get.rs  lib.rs  remove.rs
src/: error.rs  lib.rs  main.rs  validate.rs  what_is.rs
src/commands/: add.rs  auto_update.rs  deploy.rs  init.rs  link.rs  list.rs  log.rs  mod.rs  patterns.rs  push.rs  readme.rs  remove.rs  summary.rs  uninstall.rs  unlink.rs  update.rs
src/database/: add.rs  mod.rs  remove.rs
src/git/: add.rs  branch.rs  commit.rs  commit_message.rs  git_ignore.rs  local.rs  merge.rs  mod.rs  remote.rs
