[package]
name = "adof"
version = "0.10.0"
edition = "2021"
authors = ["Abinash S. <fnabinash@gmail.com>"] 
license = "MIT"
description = "ADOF - An Automatic Dot-files Organizer Friend"
readme = "README.md"
homepage = "https://github.com/fnabinash/adof"
repository = "https://github.com/fnabinash/adof"
keywords = ["config", "adof", "config-management", "vim", "neovim"]
categories = ["command-line-utilities"]

[workspace]
members = [
    "commands",
    "git",
    "database"
]

[dependencies]
clap = { version = "4.5.20", features = ["derive"] }
serde = { version = "1.0.214", features = ["derive"] }
serde_json = "1.0.132"

commands = { path = "./commands" }
error-stack = "0.5.0"
thiserror = "2.0.2"
