[package]
name = "adof"
version = "0.10.0"
edition = "2021"
authors = ["Abinash S. <fnabinash@gmail.com>"] 
license = "MIT"
description = "ADOF - An Automatic Dot-files Organizer Friend"
readme = "README.md"
homepage = "https://github.com/fnabinash/adof"
repository = "https://github.com/fnabinash/adof"
keywords = ["config", "adof", "config-management", "vim", "neovim"]
categories = ["command-line-utilities"]

[workspace]
members = [
    "commands",
    "git",
    "database"
]

[dependencies]
commands = { path = "./commands" }

clap = { version = "4.5.20", features = ["derive"] }
serde = { version = "1.0.214", features = ["derive"] }
serde_json = "1.0.132"
reqwest = { version = "0.12.9", features = ["blocking"] }
url = "2.5.3"
anyhow = "1.0.93"
