[package]
name = "adof"
version = "0.10.0"
edition = "2021"
authors = ["Abinash S. <fnabinash@gmail.com>"] 
license = "MIT"
description = "ADOF - An Automatic Dot-files Organizer Friend"
readme = "README.md"
homepage = "https://github.com/fnabinash/adof"
repository = "https://github.com/fnabinash/adof"
keywords = ["config", "adof", "config-management", "vim", "neovim"]
categories = ["command-line-utilities"]

[dependencies]
clap = { version = "4.5.20", features = ["derive"] }
serde = { version = "1.0.214", features = ["derive"] }
serde_json = "1.0.132"
reqwest = { version = "0.12.9", features = ["blocking"] }
url = "2.5.3"
anyhow = "1.0.93"
git2 = "0.19.0"
chrono = "0.4.38"
sha2 = "0.10.8"
glob = "0.3.1"
tokio = { version = "1.41.1", features = ["macros", "rt-multi-thread", "time"] }
webbrowser = "1.0.2"
